[package]
name = "praborrow-logistics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Zero-copy buffer abstraction. Handles raw byte streams without allocation overhead."
keywords = ["zero-copy", "buffer", "networking", "unsafe"]
categories = ["memory-management", "network-programming"]

[dependencies]
praborrow-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
